--- a/nbbuild/templates/common.xml
+++ b/nbbuild/templates/common.xml
@@ -743,7 +743,7 @@ made subject to such option by the copyright holder.
                 <property name="run.jvmargs.ide" value=""/> 
                 <mkdir dir="${build.test.@{test.type}.results.dir}"/>
                 <condition property="test.runner" value ="testng" else="junit">
-                    <available classname="org.testng.annotations.Test" classpathref="test.@{test.type}.run.cp"/>
+                    <available classname="org.testng.annotations.Test" classpath="${test.@{test.type}.runtime.cp}"/>
                 </condition>
                 <antcall target="-do-${test.runner}-single">
                     <param name="test.type" value="@{test.type}"/>
@@ -812,7 +812,7 @@ made subject to such option by the copyright holder.
                 <fail unless="test.class">Must set test.class</fail>
                 <mkdir dir="${build.test.@{test.type}.results.dir}"/>
                 <condition property="test.runner" value ="testng" else="junit">
-                    <available classname="org.testng.annotations.Test" classpathref="test.@{test.type}.run.cp"/>
+                    <available classname="org.testng.annotations.Test" classpath="${test.@{test.type}.runtime.cp}"/>
                 </condition>
                 <antcall target="-do-${test.runner}-debug-single">
                     <param name="test.type" value="@{test.type}"/>
@@ -931,7 +931,7 @@ made subject to such option by the copyright holder.
                 <property name="run.jvmargs.ide" value=""/>
                 <mkdir dir="${build.test.@{test.type}.results.dir}"/>
                 <condition property="test.runner" value ="testng" else="junit">
-                    <available classname="org.testng.annotations.Test" classpathref="test.@{test.type}.run.cp"/>
+                    <available classname="org.testng.annotations.Test" classpath="${test.@{test.type}.runtime.cp}"/>
                 </condition>
                 <antcall target="-do-${test.runner}-testmethod">
                     <param name="test.type" value="@{test.type}"/>
