--- a/javafx2.samples/FXML-LoginDemo/src/demo/login.fxml
+++ b/javafx2.samples/FXML-LoginDemo/src/demo/login.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!--
- * Copyright (c) 2008, 2011 Oracle and/or its affiliates.
+ * Copyright (c) 2008, 2012 Oracle and/or its affiliates.
  * All rights reserved. Use is subject to license terms.
  *
  * This file is available and licensed under the following license:
@@ -31,6 +31,7 @@
  * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 <?import java.lang.*?>
+<?import java.net.*?>
 <?import java.util.*?>
 <?import javafx.collections.*?>
 <?import javafx.scene.*?>
@@ -39,31 +40,18 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<StackPane fx:controller="demo.LoginController" id="Login" xmlns:fx="http://javafx.com/fxml">
-    <children>
-        <AnchorPane>
-            <!-- Prevent AnchorPane so that it's max = pref. This causes it to center in StackPane -->
-            <maxWidth><Double fx:value="-Infinity"/></maxWidth>
-            <maxHeight><Double fx:value="-Infinity"/></maxHeight>
-            <children>
-                <TextField layoutX="68.0" layoutY="58.0" prefWidth="126.0" fx:id="userId" onAction="#processLogin"/>
-                <PasswordField layoutX="327.0" layoutY="58.0" prefWidth="126.0" fx:id="password" onAction="#processLogin"/>
-                <Label layoutX="229.0" layoutY="61.0" text="Password:" />
-                <Label layoutX="16.0" layoutY="61.0" text="User:" />
-                <Button layoutX="200.0" layoutY="125.0" text="login" defaultButton="true" fx:id="login" onAction="#processLogin"/>
-                <Label layoutX="80.0" layoutY="200.0" textFill="RED" fx:id="errorMessage" />
-            </children>
-            <properties>
-                <backgroundColor>
-                    <Color blue="1.0" green="1.0" red="1.0" />
-                </backgroundColor>
-                <elementLockSel>
-                    <Boolean fx:value="true" />
-                </elementLockSel>
-            </properties>
-        </AnchorPane>
-    </children>
-    <styleClass>
-        <String fx:value="login" />
-    </styleClass>
+<StackPane id="Login" styleClass="login" xmlns:fx="http://javafx.com/fxml" fx:controller="demo.LoginController">
+    <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity">
+        <!-- Prevent AnchorPane so that it's max = pref. This causes it to center in StackPane -->
+        <TextField fx:id="userId" layoutX="68.0" layoutY="58.0" onAction="#processLogin" prefWidth="126.0" />
+        <PasswordField fx:id="password" layoutX="327.0" layoutY="58.0" onAction="#processLogin" prefWidth="126.0" />
+        <Label layoutX="229.0" layoutY="61.0" text="Password:" />
+        <Label layoutX="16.0" layoutY="61.0" text="User:" />
+        <Button fx:id="login" defaultButton="true" layoutX="200.0" layoutY="125.0" onAction="#processLogin" text="login" />
+        <Label fx:id="errorMessage" layoutX="80.0" layoutY="200.0" textFill="RED" />
+    </AnchorPane>
+    <stylesheets>
+        <URL value="@demo.css" />
+    </stylesheets>
 </StackPane>
+
