--- a/java.source/src/org/netbeans/modules/java/ui/FmtImports.form
+++ b/java.source/src/org/netbeans/modules/java/ui/FmtImports.form
@@ -9,6 +9,7 @@
     <Property name="name" type="java.lang.String" editor="org.netbeans.modules.i18n.form.FormI18nStringEditor">
       <ResourceString bundle="org/netbeans/modules/java/ui/Bundle.properties" key="LBL_Imports" replaceFormat="org.openide.util.NbBundle.getMessage({sourceFileName}.class, &quot;{key}&quot;)"/>
     </Property>
+    <Property name="opaque" type="boolean" value="false"/>
   </Properties>
   <AuxValues>
     <AuxValue name="FormSettings_autoResourcing" type="java.lang.Integer" value="1"/>
@@ -126,7 +127,7 @@
               </Group>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="separateGroupsCheckBox" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="49" max="-2" attributes="0"/>
+              <EmptySpace max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
